# ZZZeroCard

./: PKG-INFO  README.md  pyproject.toml  requirements.txt
zzzerocard/: client.py
zzzerocard/src/components/: api.py  card.py  main.py
zzzerocard/src/generator/: style_one.py
zzzerocard/src/model/: card.py  character.py  wiki.py
zzzerocard/src/tools/: cache.py  git.py  http.py  json_data.py  settings.py
zzzerocard/src/tools/pill/: __init__.py  color.py  color_control.py  grandient_v1.py  image_control.py  text_control.py
